# cloud-pika

./: .gitignore  Makefile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.agent/rules/: data-note.md  ui-rules.md
digital-obsidian/: README.md  metadata.json
digital-obsidian/src/: App.tsx  constants.ts  index.css  main.tsx  types.ts
digital-obsidian/src/components/: Buckets.tsx  Dashboard.tsx  Layout.tsx  Settings.tsx  Transfers.tsx
docs/: implementation_plan.md  phase_report.md  product-roadmap.md  ui-design-brief.md  upgrade_plan.md
docs/plans/: 2026-04-12-multi-cloud-cdn.md
sidecar/: Makefile  go.mod  go.sum
sidecar/internal/model/: cdn.go  (+3 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: mod.rs  sidecar.rs  system.rs
src/components/: BootstrapScreen.tsx  CommandPalette.tsx  ErrorBoundary.tsx
src/hooks/: useCloudApi.ts  useKeyboardNavigation.ts  useSSE.ts  useSidecarBootstrap.ts  useSidecarWatchdog.ts  useThemeSync.ts  useThumbnail.ts
src/i18n/: i18n.ts
src/lib/: api-client.ts  file-icon.tsx  format.ts  locale.ts  preview-type.ts  provider.ts  tauri.ts  theme.ts  toast.ts
src/pages/: BucketPage.tsx  LoginPage.tsx  SettingsPage.tsx  TransfersPage.tsx
src/stores/: useAccountStore.ts  useAppStore.ts  useBucketStore.ts  useTransferStore.ts
src/test/: fixtures.ts  setup.ts  test-utils.tsx
src/types/: account.ts  cloud.ts  common.ts
(+117 files in other folders)
