[package]
name = "cloud-pika"
version = "0.1.0"
description = "Cloud Pika Desktop"
authors = ["goll"]
license = "MIT"
edition = "2021"

[lib]
name = "cloud_pika_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = ["tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.15"
arboard = "3.4"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0.0"
